# ambient

./: .gitignore  AGENTS.md  Agents.md  CLAUDE.md  Cargo.toml  NEXT.md  README.md  new.md  rustfmt.toml  test_objc.rs
crates/ambient-cli/: Cargo.toml
crates/ambient-cli/src/: factory.rs  lib.rs  main.rs
crates/ambient-core/: Cargo.toml
crates/ambient-core/src/: lib.rs
crates/ambient-lenses/: Cargo.toml
crates/ambient-lenses/src/: lib.rs
crates/ambient-menubar/: Cargo.toml
crates/ambient-menubar/src/: lib.rs
crates/ambient-normalizer/: Cargo.toml  build.rs
crates/ambient-normalizer/src/: apple_notes.proto  applenotes.rs  lib.rs
crates/ambient-onboard/: Cargo.toml
crates/ambient-onboard/src/: lib.rs
crates/ambient-patterns/: Cargo.toml
crates/ambient-patterns/src/: lib.rs  noticer_pipeline.rs  rule_engine.rs
crates/ambient-patterns/tests/: noticer_tests.rs  rules_tests.rs
crates/ambient-query/: Cargo.toml
crates/ambient-query/src/: lib.rs
crates/ambient-reasoning/: Cargo.toml
crates/ambient-reasoning/src/: lib.rs
crates/ambient-recorder/: Cargo.toml
crates/ambient-recorder/src/: main.rs
crates/ambient-spotlight/: Cargo.toml
crates/ambient-spotlight/src/: lib.rs
crates/ambient-store/: Cargo.toml
crates/ambient-store/src/: bin.rs  lancedb_store.rs  lib.rs
crates/ambient-store/~/.ambient/pulse/00000001771714800000/: records.wal
crates/ambient-stream/: Cargo.toml
crates/ambient-stream/src/: lib.rs
crates/ambient-transport-bonjour/: Cargo.toml
crates/ambient-transport-bonjour/src/: lib.rs
crates/ambient-transport-cloudkit/: Cargo.toml
crates/ambient-transport-cloudkit/src/: apple_bridge.rs  lib.rs  native.rs  normalizer.rs  record_types.rs  token.rs  transport.rs
crates/ambient-transport-google-health/: Cargo.toml
crates/ambient-transport-google-health/src/: lib.rs
crates/ambient-transport-local/: Cargo.toml
crates/ambient-transport-local/src/: active_app.rs  active_app_provider.rs  audio_input.rs  calendar.rs  context_switch.rs  healthkit.rs  lib.rs  load.rs  obsidian.rs
crates/ambient-triggers/: Cargo.toml
crates/ambient-triggers/src/: lib.rs
crates/ambient-watcher/: Cargo.toml
crates/ambient-watcher/src/: lib.rs
crates/tsink/: Cargo.toml
crates/tsink/src/: lib.rs
docs/design/: ambient_v2_spec.md  split_cozo.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: phase1.rs  phase2.rs  phase3.rs
tests/integration/~/.ambient/pulse/00000001771714800000/: records.wal
