[workspace]
resolver = "2"
members = [
  "crates/tsink",
  "crates/ambient-core",
  "crates/ambient-stream",
  "crates/ambient-transport-local",
  "crates/ambient-transport-bonjour",
  "crates/ambient-transport-cloudkit",
  "crates/ambient-transport-google-health",
  "crates/ambient-recorder",
  "crates/ambient-watcher",
  "crates/ambient-normalizer",
  "crates/ambient-store",
  "crates/ambient-spotlight",
  "crates/ambient-reasoning",
  "crates/ambient-patterns",
  "crates/ambient-triggers",
  "crates/ambient-query",
  "crates/ambient-menubar",
  "crates/ambient-onboard",
  "crates/ambient-cli",
  "tests/integration",
]
