[package]
name = "ambient-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ambient"
path = "src/main.rs"

[dependencies]
ambient-core = { path = "../ambient-core" }
ambient-onboard = { path = "../ambient-onboard" }
ambient-patterns = { path = "../ambient-patterns" }
ambient-query = { path = "../ambient-query" }
ambient-stream = { path = "../ambient-stream" }
ambient-transport-bonjour = { path = "../ambient-transport-bonjour" }
ambient-transport-cloudkit = { path = "../ambient-transport-cloudkit" }
ambient-transport-google-health = { path = "../ambient-transport-google-health" }
ambient-transport-local = { path = "../ambient-transport-local" }
ambient-menubar = { path = "../ambient-menubar" }
ambient-normalizer = { path = "../ambient-normalizer" }
ambient-reasoning = { path = "../ambient-reasoning" }
ambient-spotlight = { path = "../ambient-spotlight" }
ambient-triggers = { path = "../ambient-triggers" }
axum = { version = "0.7", features = ["json"] }
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
[dev-dependencies]
ambient-core = { path = "../ambient-core", features = ["test-mocks"] }
