[package]
name = "ambient-core"
version = "0.1.0"
edition = "2021"

[features]
test-mocks = []

[dependencies]
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
