[package]
name = "ambient-menubar"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core = { path = "../ambient-core" }
ambient-query = { path = "../ambient-query" }
uuid = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
objc2 = "0.6"

[dev-dependencies]
chrono = "0.4"
ambient-core = { path = "../ambient-core", features = ["test-mocks"] }
