[package]
name = "ambient-patterns"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core  = { path = "../ambient-core" }
ambient-store = { path = "../ambient-store" }
blake3        = "1"
chrono        = "0.4"
cozo          = { version = "0.7", default-features = false, features = ["storage-rocksdb", "requests"] }
uuid          = "1"
