[package]
name = "ambient-patterns"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core  = { path = "../ambient-core" }
ambient-store = { path = "../ambient-store" }
blake3        = "1"
chrono        = "0.4"
cozo          = { version = "0.7", default-features = false, features = ["storage-rocksdb", "requests"] }
ndarray = "0.17.2"
petal-clustering = "0.13.0"
petal-neighbors = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uuid          = "1"
