[package]
name = "ambient-reasoning"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core = { path = "../ambient-core" }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rig-core = "0.31"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
uuid = "1"
