[package]
name = "ambient-recorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ambient-recorder"
path = "src/main.rs"

[dependencies]
ambient-core = { path = "../ambient-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
