[package]
name = "ambient-store"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core = { path = "../ambient-core" }
arrow = "53.0.0"
# Pin chrono to a locally available version compatible with workspace resolution.
chrono = "=0.4.42"
cozo = "0.7.6"
futures = "0.3"
lancedb = "0.14.0"
rayon = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tsink = { path = "../tsink" }
uuid = "1"
