[package]
name = "ambient-transport-cloudkit"
version = "0.1.0"
edition = "2021"

[features]
default = []
cloudkit-native = []

[dependencies]
ambient-core = { path = "../ambient-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["rt", "time"] }
