[package]
name = "ambient-transport-local"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core = { path = "../ambient-core" }
ambient-spotlight = { path = "../ambient-spotlight" }
ambient-watcher = { path = "../ambient-watcher" }
chrono = "0.4"
notify = "6"
objc2 = "0.6"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
